--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Main</title>
+	<title>Main</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Oswald|Source+Sans+Pro:200,400" rel="stylesheet">
 </head>
 
 <body>
 <div id="elm"></div>
-<script src="main.js"></script>
 <div id="elm"></div>
+<script src="main.js"></script>
 <script>
 	var app = Elm.Main.init({
 		node: document.getElementById('elm')
